--- a/LKCTC/index.html
+++ b/LKCTC/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+<frameset rows="20%,80%,10%">
+    <frame src="index.html" name="topFrame">
+    <frame src="Pages/aboutus.html" name="mainFrame">
+    <frame src="Pages/contactus.html" name="bottomFrame">
+</frameset>
 </body>
 </html>
