--- a/Harman kaur 9653/harman.html
+++ b/Harman kaur 9653/harman.html
@@ -13,6 +13,15 @@
         <input type="text" id="lname" name="lname" placeholder="Enter your last name" required/>
         <input type="email" id="email" name="email" placeholder="Enter your email" required/>
         <input type="tel" id="mobile" name="mobile" placeholder="Enter your mobile number" required/>
+        <input type="date" id="dob" name="dob" placeholder="Enter your date of birth" required/>
+        <input type="time" id="time" name="time" placeholder="Enter your preferred time" required/>
+        <input type="password" id="password" name="password" placeholder="Enter your password" required/>
+        <input type="radio" id="yes" name="subscribe" value="yes" required/>
+        <label for="yes">Yes</label>
+        <input type="radio" id="no" name="subscribe" value="no" required/>
+        <label for="no">No</label>
+        <input type="checkbox" id="privacy" name="privacy" required/>
+        <input type="color"
         <input type="submit" value="Submit"/>
  </form>
 </body>
