Remove obsolete HTML files and add new time table

--- a/DEMO.HTML/index.html
+++ b/DEMO.HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css"
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, recusandae qui ipsam voluptates reiciendis quisquam voluptate. Dolores repellat reiciendis, distinctio eaque iure officia consequuntur ullam dignissimos maiores ipsa doloribus voluptatum?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quis sint voluptas obcaecati pariatur, mollitia fugiat illum temporibus corrupti dolores, voluptates quod nulla hic accusantium cum! Odit dicta et a laboriosam nobis pariatur. Eaque eos aut vel reprehenderit, neque doloribus reiciendis facere atque, laborum autem esse corrupti sequi! Laudantium laborum atque cum quaerat delectus aut accusantium quod, eius ut. Nesciunt debitis nisi accusamus reprehenderit, doloribus, sequi dignissimos exercitationem possimus eaque molestias, dolorum optio modi maxime quas a officia. Nobis omnis eius sed provident quibusdam accusamus, recusandae esse labore sit aliquam placeat consequatur perferendis officiis autem, blanditiis temporibus aliquid saepe praesentium?
     </h1>
 </body>
 </html>
